<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingHorizontal="30dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:background="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/txt_splash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_splash"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="36sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/signup_free"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background_green"
        app:layout_constraintTop_toBottomOf="@+id/txt_splash" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_c_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c_phone_number"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginVertical="10dp"
        android:background="@drawable/button_background_1"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

    <ImageView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/baseline_phone_iphone_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_signup" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_c_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c_google"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginVertical="10dp"
        android:background="@drawable/button_background_1"
        app:layout_constraintTop_toBottomOf="@+id/btn_c_phone_number" />

    <ImageView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_c_phone_number" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_c_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c_facebook"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginVertical="10dp"
        android:background="@drawable/button_background_1"
        app:layout_constraintTop_toBottomOf="@id/btn_c_google" />

    <ImageView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/facebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_c_google" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTintMode="multiply"
        app:layout_constraintTop_toBottomOf="@id/btn_c_facebook" />

</androidx.constraintlayout.widget.ConstraintLayout>