<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="10dp"
    tools:context=".LoginActivity">

    <ImageButton
        android:id="@+id/btn_back_to_splash"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/baseline_arrow_back_24"
        android:contentDescription="back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_email_or_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_or_usn"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back_to_splash" />

    <EditText
        android:id="@+id/edit_txt_email_or_username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_background"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/txt_email_or_username" />

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_txt_email_or_username" />

    <EditText
        android:id="@+id/edit_txt_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingHorizontal="10dp"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_background"
        app:layout_constraintTop_toBottomOf="@id/txt_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/grey"
        android:text="@string/login"
        android:textColor="@color/black"
        android:background="@drawable/button_background_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_txt_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_wo_pw"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:text="@string/login_wo_pw"
        android:textSize="10sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/button_background_1"
        android:layout_margin="30dp"
        android:paddingHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>