<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.255" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <LinearLayout
        android:id="@+id/layout_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline1">

        <ImageButton
            android:id="@+id/btn_home"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="home"
            android:background="@drawable/baseline_home_24" />

        <TextView
            android:id="@+id/txt_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textSize="10sp"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline1"
        app:layout_constraintEnd_toStartOf="@id/guideline2">

        <ImageButton
            android:id="@+id/btn_search"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="home"
            android:background="@drawable/baseline_search_24" />

        <TextView
            android:id="@+id/txt_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textSize="10sp"
            android:textColor="@color/grey" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="@id/guideline3">

        <ImageButton
            android:id="@+id/btn_library"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="home"
            android:background="@drawable/baseline_view_week_24" />

        <TextView
            android:id="@+id/txt_library"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/library"
            android:textSize="10sp"
            android:textColor="@color/grey" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_rewards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/btn_rewards"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="home"
            android:background="@drawable/baseline_diamond_24" />

        <TextView
            android:id="@+id/txt_rewards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rewards"
            android:textSize="10sp"
            android:textColor="@color/grey" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>